# STDISCM-PROBSET4

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt  ImageItemWidget.h  MainWindow.cpp  MainWindow.h  OcrClient.cpp  OcrClient.h
dataset/: labels.csv
og/client/: ImageItemWidget.cpp  MainWindow.ui
og/proto/: ocr.proto
og/server/: OcrEngine.cpp  OcrServiceImpl.h  main.cpp
prob set 4 (other version)/client/: MainWindow.cpp
prob set 4 (other version)/server/: CMakeLists.txt  OcrServiceImpl.cpp
prob_set_4_other_version/client/: MainWindow.cpp  MainWindow.h
server/: CMakeLists.txt  OcrEngine.cpp  OcrServiceImpl.cpp  OcrWorkerPool.cpp  OcrWorkerPool.h  main.cpp
v1/server/: OcrEngine.h
v2/client/: MainWindow.cpp
v2/proto/: ocr.proto
v2/server/: OcrServiceImpl.cpp  OcrServiceImpl.h
v3/client/: MainWindow.cpp
v3/server/: main.cpp
v4/: CMakeLists.txt
v4/client/: CMakeLists.txt  MainWindow.cpp
v4/server/: OcrServiceImpl.cpp  main.cpp
